# flutter_desktop_bluetooth_direct

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/coba_lagi/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  bridge_generated.dart  bridge_generated.freezed.dart  ffi.io.dart  main.dart  perangkat_tersimpan.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
sh/: gen.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake
windows/runner/: Runner.rc  main.cpp
