[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "1"
async-trait = "0.1.61"
bluest = "0.5.3"
futures-util = "0.3.25"
tokio = {version="1.24.1",features=["full"]}
tracing = "0.1.37"
tracing-subscriber ={version="0.3.16",features=["env-filter"]}
uuid = "1.2.2"
anyhow = "1.0.68"
once_cell = "1.17.0"
